--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           System Engineer @ <span class="unicorn">SYSCOM GS</span>
         </p>
         <p>
-          <span class="vmw">Alumni of Cal State LA</span>, Ex-<span class="pivotal">Swimmer</span>
+          <span class="vmw">Alumni of Cal State LA</span>, Ex-<span class="pivotal">Swimmer &#127946</span>
           <br/>
 	  Currently working at <a href="https://www.syscomgs.com/"><font color="lightskyblue">syscomgs</font></a>
         </p>
