--- a/index.html
+++ b/index.html
@@ -45,13 +45,16 @@
         </h4>
 
         <!-- Subheader text -->
+	<p>
+          Cloud Operations @ <span class="unicorn">Exabeam</span>
+        </p>      
         <p>
-          System Engineer @ <span class="unicorn">SYSCOM GS</span>
+          Past. System Engineer @ <span class="unicorn">SYSCOM GS</span>
         </p>
         <p>
           <span class="vmw">Alumni of Cal State LA</span>, Ex-<span class="pivotal">Swimmer &#127946</span>
           <br/>
-	  Currently working at <a href="https://www.syscomgs.com/"><font color="lightskyblue">syscomgs</font></a>
+	  Currently working at <a href="https://www.exabeam.com/"><font color="lightskyblue">Exabeam</font></a>
         </p>
 
         <!-- Bio text -->
