--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <!-- Basic Page Needs -->
   <meta charset="utf-8">
   <title>Arpit Patel {ap}</title>
-  <meta name="description" content="Homepage of Arpit Patel, System Engineer.">
+  <meta name="description" content="Homepage of Arpit Patel, Cloud Engineer.">
   <meta name="author" content="Arpit Patel">
   <meta name="keywords" content="Arpit Patel" />
   <meta property="og:type" content="website" />
