--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
         <!-- Bio text -->
         <p>
     I studied electrical engineering @ <a href="http://www.calstatela.edu/"><font color="yellow">Cal State LA</font></a>.  In my free time, I read books and magazines. I like to run and hike. Listening pop, deep house, gazals and bollywood songs
-    is best pastime activity. Currenly working on
-    <a href="https://www.fluentd.org/"><font color="lightskyblue">Fluentd.</font></a> I also want to run 10k this year. 
+    is best pastime activity. I also would like to run 10k this year. 
           <br />
         </p>
         Media:
