--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     '{arpitpatel.me}',
     'homepage of',
     'arpit patel',
-    'system engineer',
+    'cloud operation engineer',
   ]
 
   const el = document.querySelector('.text');
