--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
 
         <!-- Bio text -->
         <p>
-    I studied electrical engineering @ <a href="http://www.calstatela.edu/"><font color="yellow">Cal State LA</font></a>.  In my free time, I read books and magazines. I like to run and hike. Listening pop, deep house, gazals and bollywood songs
-    is best pastime activity. I frequently run 5Ks, but I'm aiming to complete a half-marathon. 
+    I earned my electrical engineering degree @ <a href="http://www.calstatela.edu/"><font color="yellow">Cal State LA</font></a>. In my free time, I enjoy reading, running, hiking, and listening to music, including pop, deep house, gazals, and bollywood songs. I frequently run 5Ks, but I'm aiming to complete a half-marathon this year.
           <br />
         </p>
         Media:
